@@ -1,3 +1,15 @@
+2014-06-11  Brent Fulgham  <bfulgham@apple.com>
+
+        ROLLOUT: r153510: Broke Table borders on Wikipedia
+        https://bugs.webkit.org/show_bug.cgi?id=132802
+        <rdar://problem/16792562>
+
+        * rendering/RenderTableCell.cpp:
+        (WebCore::RenderTableCell::paintCollapsedBorders):
+        (WebCore::RenderTableCell::alignLeftRightBorderPaintRect): Deleted.
+        (WebCore::RenderTableCell::alignTopBottomBorderPaintRect): Deleted.
+        * rendering/RenderTableCell.h:
+
 2014-06-11  peavo@outlook.com  <peavo@outlook.com>
 
         [Curl] Empty headers in request response.
